--- a/home-page.html
+++ b/home-page.html
@@ -92,11 +92,11 @@
 
         </nav>
     </header>  -->
-    <main class="container custorm-container">
+    <!-- <main class="container custorm-container px-0">
         <section class="position-relative">
-            <img class="container" src="./asset/img/img.png" alt="">
-            <div class="form-introduce position-absolute d-inline-block border-1 bg-light">
-                <span class="tag">Technology</span>
+            <img class="img-fluid" src="./asset/img/img.png" alt="">
+            <div class="form-introduce position-absolute d-inline-block border-1 bg-white">
+                <span class="tag rounded">Technology</span>
                 <h2>The Impact of Technology on <br> the Workplace: How <br> Technology is Changing</h2>
                 <div class="infor-user">
                     <div class="user">
@@ -115,100 +115,100 @@
         </section>
 
         <section class="list-post">
-            <h4>Latest Post</h4>
-            <div class="posts row flex-row flex-wrap">
-                <div class="col-4">
+            <h4 class="title">Latest Post</h4>
+            <div class="posts row gx-md-4">
+                <div class="col-lg-4 col-md-6 col-sm-8 col-12 post">
                     <article>
-                        <img src="./asset/img/img-post1.png" alt="">
+                        <img class="img-fluid" src="./asset/img/img-post1.png" alt="">
                         <span class="tag rounded">Technology</span>
-                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <h4>The Impact of Technology on the Workplace: How Technology is Changing</h4>
                         <div class="infor-user">
                             <div class="user">
-                                <img src="./asset/img/img-user2.png" alt="">
+                                <img class="img-fluid" src="./asset/img/img-user2.png" alt="">
                                 <span>Tracey Wilson</span>
                             </div>
                             <span class="time">August 20, 2022</span>
                         </div>
                     </article>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 col-sm-8 col-12 post ">
                     <article>
-                        <img src="./asset/img/img-post2.png" alt="">
+                        <img class="img-fluid" src="./asset/img/img-post2.png" alt="">
                         <span class="tag rounded">Technology</span>
-                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <h4>The Impact of Technology on the Workplace: How Technology is Changing</h4>
                         <div class="infor-user">
                             <div class="user">
-                                <img src="./asset/img/img-user1.png" alt="">
+                                <img class="img-fluid" src="./asset/img/img-user1.png" alt="">
                                 <span>Json Francisco</span>
                             </div>
                             <span class="time">August 20, 2022</span>
                         </div>
                     </article>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 col-sm-8 col-12 post ">
                     <article>
-                        <img src="./asset/img/img-post3.png" alt="">
+                        <img class="img-fluid" src="./asset/img/img-post3.png" alt="">
                         <span class="tag rounded">Technology</span>
-                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <h4>The Impact of Technology on the Workplace: How Technology is Changing</h4>
                         <div class="infor-user">
                             <div class="user">
-                                <img src="./asset/img/img-user3.png" alt="">
+                                <img class="img-fluid" src="./asset/img/img-user3.png" alt="">
                                 <span>Elizabeth Slavin</span>
                             </div>
                             <span class="time">August 20, 2022</span>
                         </div>
                     </article>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 col-sm-8 col-12 post ">
                     <article>
-                        <img src="./asset/img/img-post4.png" alt="">
+                        <img class="img-fluid" src="./asset/img/img-post4.png" alt="">
                         <span class="tag rounded">Technology</span>
-                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <h4>The Impact of Technology on the Workplace: How Technology is Changing</h4>
                         <div class="infor-user">
                             <div class="user">
-                                <img src="./asset/img/img-user4.png" alt="">
+                                <img class="img-fluid" src="./asset/img/img-user4.png" alt="">
                                 <span>Ernie Smith</span>
                             </div>
                             <span class="time">August 20, 2022</span>
                         </div>
                     </article>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 col-sm-8 col-12 post ">
                     <article>
-                        <img src="./asset/img/img-post5.png" alt="">
+                        <img class="img-fluid" src="./asset/img/img-post5.png" alt="">
                         <span class="tag rounded">Technology</span>
-                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <h4>The Impact of Technology on the Workplace: How Technology is Changing</h4>
                         <div class="infor-user">
                             <div class="user">
-                                <img src="./asset/img/img-user5.png" alt="">
+                                <img class="img-fluid" src="./asset/img/img-user5.png" alt="">
                                 <span>Eric Smith</span>
                             </div>
                             <span class="time">August 20, 2022</span>
                         </div>
                     </article>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 col-sm-8 col-12 post ">
                     <article>
-                        <img src="./asset/img/img-post6.png" alt="">
+                        <img class="img-fluid" src="./asset/img/img-post6.png" alt="">
                         <span class="tag rounded">Technology</span>
-                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <h4>The Impact of Technology on the Workplace: How Technology is Changing</h4>
                         <div class="infor-user">
                             <div class="user">
-                                <img src="./asset/img/img-user2.png" alt="">
+                                <img class="img-fluid" src="./asset/img/img-user2.png" alt="">
                                 <span>Tracey Wilson</span>
                             </div>
                             <span class="time">August 20, 2022</span>
                         </div>
                     </article>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 col-sm-8 col-12 post ">
                     <article>
-                        <img src="./asset/img/img-post7.png" alt="">
+                        <img class="img-fluid" src="./asset/img/img-post7.png" alt="">
                         <span class="tag rounded">Technology</span>
-                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <h4>The Impact of Technology on the Workplace: How Technology is Changing</h4>
                         <div class="infor-user">
                             <div class="user">
-                                <img src="./asset/img/img-user1.png" alt="">
+                                <img class="img-fluid" src="./asset/img/img-user1.png" alt="">
                                 <span>Jason Francisco</span>
                             </div>
 
@@ -216,28 +216,28 @@
                         </div>
                     </article>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 col-sm-8 col-12 post ">
                     <article>
-                        <img src="./asset/img/img-post8.png" alt="">
+                        <img class="img-fluid" src="./asset/img/img-post8.png" alt="">
                         <span class="tag rounded">Technology</span>
-                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <h4>The Impact of Technology on the Workplace: How Technology is Changing</h4>
                         <div class="infor-user">
                             <div class="user">
-                                <img src="./asset/img/img-user3.png" alt="">
+                                <img class="img-fluid" src="./asset/img/img-user3.png" alt="">
                                 <span>Elizabeth Slavin</span>
                             </div>
                             <span class="time">August 20, 2022</span>
                         </div>
                     </article>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 col-sm-8 col-12 post ">
                     <article>
-                        <img src="./asset/img/img-post9.png" alt="">
+                        <img class="img-fluid" src="./asset/img/img-post9.png" alt="">
                         <span class="tag rounded">Technology</span>
-                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <h4>The Impact of Technology on the Workplace: How Technology is Changing</h4>
                         <div class="infor-user">
                             <div class="user">
-                                <img src="./asset/img/img-user4.png" alt="">
+                                <img class="img-fluid" src="./asset/img/img-user4.png" alt="">
                                 <span>Ernie Smith</span>
                             </div>
                             <span class="time">August 20, 2022</span>
@@ -245,7 +245,7 @@
                     </article>
                 </div>
             </div>
-            <button class="border-1 view rounded d-flex justify-content-center align-items-center">
+            <button class=" view rounded d-flex justify-content-center align-items-center bg-white">
                 View All Post
             </button>
         </section>
@@ -254,9 +254,9 @@
             <h4>You can place ads</h4>
             <p>750x100</p>
         </section>
-    </main>
-    <!-- <footer>
-        <div class="container first">
+    </main> -->
+    <footer>
+        <div class="container custorm-container first">
             <div class="about">
                 <h5>About</h5>
                 <p>
@@ -301,7 +301,8 @@
                     <h4>Weekly NewSletter</h4>
                     <p>Get blog articles and offers via email</p>
                     <label for="email">
-                        <input type="email" name="email" id="email" placeholder="Your Email">
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                            placeholder="Your Email">
                         <i>
                             <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -315,11 +316,11 @@
 
                         </i>
                     </label>
-                    <button>Subscribe</button>
+                    <button type="button" class="btn btn-primary">Subscribe</button>
                 </form>
             </div>
         </div>
-        <div class="last container">
+        <div class="last container custorm-container">
             <div class="logo-footer">
                 <a href="">
                     <img src="./asset/img/logo-bottom.png" alt="">
@@ -346,7 +347,7 @@
                 </li>
             </ul>
         </div>
-    </footer> -->
+    </footer>
     <script src="./asset/script/vendor.min.js"></script>
     <script src="./asset/script/click.js"></script>
 </body>
