--- a/home-page.html
+++ b/home-page.html
@@ -12,6 +12,7 @@
 
 </head>
 
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary container custorm-container nav-header">
@@ -95,7 +96,7 @@
     <main class="container custorm-container px-0">
         <section class="position-relative">
             <img class="img-fluid" src="./asset/img/img.png" alt="">
-            <div class="form-introduce position-absolute d-inline-block border-1 bg-white">
+            <div class="form-introduce position-absolute d-inline-block bg-white">
                 <span class="tag rounded">Technology</span>
                 <h2>The Impact of Technology on <br> the Workplace: How <br> Technology is Changing</h2>
                 <div class="infor-user">
@@ -245,7 +246,7 @@
                     </article>
                 </div>
             </div>
-            <button class=" view rounded d-flex justify-content-center align-items-center bg-white">
+            <button class=" view rounded d-flex justify-content-center align-items-center">
                 View All Post
             </button>
         </section>
@@ -329,8 +330,9 @@
                         <span>Meta<strong>Blog</strong></span>
                     </a>
                     <p>
-                        <span>©</span>
-                        JS Template 2023. All Rights Reserved.
+                        ©
+                        <span>JS Template 2023</span>
+                        . All Rights Reserved.
                     </p>
                 </div>
             </div>
