--- a/home-page.html
+++ b/home-page.html
@@ -7,7 +7,7 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="./asset/style/vendor.min.css">
     <link rel="stylesheet" href="./asset/style/media-screen.css">
-    <link rel="stylesheet" href="./asset/style/home-page.css">
+    <link rel="stylesheet" href="./asset/style/layout.css">
     <!-- <link rel="stylesheet" href="./asset/style/responsive.css"> -->
 
 </head>
