--- a/creact-post.html
+++ b/creact-post.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Single Post</title>
+    <title>Creact Post</title>
     <link rel="stylesheet" href="./asset/style/vendor.min.css">
     <link rel="stylesheet" href="./asset/style/media-screen.css">
     <link rel="stylesheet" href="./asset/style/layout.css">
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="./blog-listing.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Single Post</a>
+                        <a class="nav-link" href="./single-post.html">Single Post</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./author-page.html">Pages</a>
@@ -87,150 +87,36 @@
                 </form>
 
             </div>
-            <button class="creact-new-post">
-                <a href="./creact-post.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
-                        <path
-                            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" />
-                    </svg>
-                </a>
-            </button>
+
         </nav>
     </header>
-    <main class="container custorm-container px-0">
-        <section>
-            <div class="form-introduce">
-                <span class="tag rounded">Technology</span>
-                <h2>The Impact of Technology on the Workplace: <br> How Technology is Changing</h2>
-                <div class="infor-user">
-                    <div class="user">
-                        <img src="./asset/img/img-person.svg" alt="">
-                        <span>Jason Francisco</span>
-                    </div>
-                    <time>August 20, 2022</time>
-                </div>
-            </div>
-        </section>
-        <img src="./asset/img/imgsingle.svg" alt="">
-        <section>
-            <article>
-                <p>
-                    Traveling is an enriching experience that opens up new horizons, exposes us to different cultures,
-                    and creates memories that last a lifetime. However, traveling can also be stressful and
-                    overwhelming,
-                    especially if you don't plan and prepare adequately. In this blog article, we'll explore tips and
-                    tricks
-                    for a memorable journey and how to make the most of your travels.
-                </p>
-                <br>
-                <br>
-                <p>
-                    One of the most rewarding aspects of traveling is immersing yourself in the local culture and
-                    customs.
-                    This includes trying local cuisine, attending cultural events and festivals, and interacting with
-                    locals.
-                    Learning a few phrases in the local language can also go a long way in making connections and
-                    showing respect.
-                </p>
-            </article>
-            <article>
-                <h4>Research Your Destination</h4>
-                <p>Before embarking on your journey, take the time to research your destination. This includes
-                    understanding the
-                    local culture, customs, and laws, as well as identifying top attractions, restaurants, and
-                    accommodations.
-                    Doing so will help you navigate your destination with confidence and avoid any cultural faux pas.
-                </p>
-                <br>
-                <br>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. In hendrerit gravida rutrum quisque non tellus orci ac auctor. Mi ipsum
-                    faucibus
-                    vitae aliquet nec ullamcorper sit amet. Aenean euismod elementum nisi quis eleifend quam adipiscing
-                    vitae.
-                    Viverra adipiscing at in tellus.
-                </p>
-            </article>
-            <article>
-                <h4>Plan Your Itinerary</h4>
-                <p>While it's essential to leave room for spontaneity and unexpected adventures, having a rough
-                    itinerary can
-                    help you make the most of your time and budget. Identify the must-see sights and experiences and
-                    prioritize
-                    them according to your interests and preferences. This will help you avoid overscheduling and ensure
-                    that
-                    you have time to relax and enjoy your journey.
-                </p>
-                <br>
-                <br>
-                <p>
-                    Vitae sapien pellentesque habitant morbi tristique. Luctus venenatis lectus magna fringilla. Nec
-                    ullamcorper
-                    sit amet risus nullam eget felis. Tincidunt arcu non sodales neque sodales ut etiam sit amet.
-                </p>
-            </article>
-        </section>
-        <section>
-            <article class="italics">
-                “Traveling can expose you to new environments and potential health
-                risks, so it's crucial to take precautions to stay safe and healthy.”
-            </article>
-        </section>
-        <img src="./asset/img/imgsingle2.svg" alt="">
-        <section class="advertisement">
-            <p>Advertisement</p>
-            <h4>You can place ads</h4>
-            <p>750X100</p>
-        </section>
-        <section>
-            <article>
-                <h4>Pack Lightly and Smartly</h4>
-                <p>
-                    Packing can be a daunting task, but with some careful planning and smart choices,
-                    you can pack light and efficiently. Start by making a packing list and sticking to
-                    it, focusing on versatile and comfortable clothing that can be mixed and matched.
-                    Invest in quality luggage and packing organizers to maximize space and minimize wrinkles.
-                </p>
-            </article>
-            <article>
-                <h4>Stay Safe and Healthy</h4>
-                <p>
-                    Traveling can expose you to new environments and potential health risks, so it's crucial
-                    to take precautions to stay safe and healthy. This includes researching any required vaccinations
-                    or medications, staying hydrated, washing your hands frequently, and using sunscreen and insect
-                    repellent. It's also essential to keep your valuables safe and secure and to be aware of your
-                    surroundings at all times.
-                </p>
-            </article>
-            <article>
-                <h4>Immerse Yourself in the Local Culture</h4>
-                <p>
-                    One of the most rewarding aspects of traveling is immersing yourself in the local culture and
-                    customs. This includes trying local cuisine, attending cultural events and festivals, and
-                    interacting with locals. Learning a few phrases in the local language can also go a long way
-                    in making connections and showing respect.
-                </p>
-            </article>
-            <article>
-                <h4>Capture Memories</h4>
-                <p>
-                    Finally, don't forget to capture memories of your journey. Whether it's through photographs,
-                    journaling, or souvenirs, preserving the moments and experiences of your travels can bring joy
-                    and nostalgia for years to come. However, it's also essential to be present in the moment and
-                    not let technology distract you from the beauty of your surroundings.
-                </p>
-            </article>
-            <article>
-                <h4>Conclusion:</h4>
-                <p>
-                    Traveling is an art form that requires a blend of planning, preparation, and spontaneity. By
-                    following these tips and tricks, you can make the most of your journey and create memories
-                    that last a lifetime. So pack your bags, embrace the adventure, and enjoy the ride.
-                </p>
-            </article>
-        </section>
+    <main class="container custorm-container px-0 creact-post">
+        <h2 class="text-center">Creact New Post</h2>
+        <form action="#" class="d-flex flex-column">
+            <label for="title">
+                <h5>Title Post</h5>
+                <input type="text" id="title" placeholder="Enter Title Post">
+            </label>
+            <label for="file">
+                <h5>Main Image</h5>
+                <img src="" alt="" id="main-img">
+                <input type="file" name="" id="file">
+            </label>
+            <label for="content">
+                <h5>Content</h5>
+                <textarea name="" id="content" cols="" rows="20" placeholder="Enter Content"></textarea>
+            </label>
+            <label for="img">
+                <h5>Creactor Image</h5>
+                <img src="" id="creactor-img" alt="">
+                <input type="file" name="" id="img">
+            </label>
+            <label for="name">
+                <h5>Creactor Name</h5>
+                <input type="text" id="name" placeholder="Enter Creactor Name">
+            </label>
+            <button class="btn btn-primary text-center border-0">Creact Post</button>
+        </form>
     </main>
     <footer>
         <div class="container custorm-container d-flex flex-wrap first">
@@ -328,5 +214,3 @@
     <script src="./asset/script/vendor.min.js"></script>
     <script src="./asset/script/click.js"></script>
 </body>
-
-</html>
