--- a/creact-post.html
+++ b/creact-post.html
@@ -97,23 +97,33 @@
                 <h5>Title Post</h5>
                 <input type="text" id="title" placeholder="Enter Title Post">
             </label>
-            <label for="file">
-                <h5>Main Image</h5>
-                <img src="" alt="" id="main-img">
-                <input type="file" name="" id="file">
-            </label>
-            <label for="content">
-                <h5>Content</h5>
-                <textarea name="" id="content" cols="" rows="20" placeholder="Enter Content"></textarea>
-            </label>
-            <label for="img">
-                <h5>Creactor Image</h5>
-                <img src="" id="creactor-img" alt="">
-                <input type="file" name="" id="img">
+            <label for="main-img" class="m-auto">
+                <h5>Choose Main Image</h5>
+                <input type="file" name="" id="main-img">
             </label>
             <label for="name">
                 <h5>Creactor Name</h5>
                 <input type="text" id="name" placeholder="Enter Creactor Name">
+            </label>
+            <label for="img-first" class="m-auto">
+                <h5>Creactor Image First</h5>
+                <input type="file" name="" id="img-first">
+            </label>
+            <label for="content-first">
+                <h5>Content First</h5>
+                <textarea name="" id="content-first" cols="" rows="15" placeholder="Enter Content"></textarea>
+            </label>
+            <label for="content-italics">
+                <h5>Content Italics</h5>
+                <input type="text" id="content-italics" placeholder="Enter Content Italics">
+            </label>
+            <label for="img-second" class="m-auto">
+                <h5>Creactor Image Second</h5>
+                <input type="file" name="" id="img-second">
+            </label>
+            <label for="content-second">
+                <h5>Content Second</h5>
+                <textarea name="" id="content-second" cols="" rows="15" placeholder="Enter Content"></textarea>
             </label>
             <button class="btn btn-primary text-center border-0">Creact Post</button>
         </form>
