--- a/author-page.html
+++ b/author-page.html
@@ -99,12 +99,15 @@
     </header>
     <main class="container custorm-container px-0">
         <section class="intro-infor">
-            <article class="person-infor">
-                <img src="./asset/img/img1.svg" alt="">
-                <span>
-                    <p>Jonathan Doe</p>
-                    <p>Collaborator & Editor</p>
-                </span>
+            <article class="person-infor text-center">
+                <div>
+                    <div>
+                        <img src="./asset/img/img-user1.png" alt="">
+                        <span>Jonathan Doe</span>
+                    </div>
+                    <span>Collaborator & Editor</span>
+                </div>
+
             </article>
             <article class="text">
                 <p>
