--- a/blog-listing.html
+++ b/blog-listing.html
@@ -98,7 +98,7 @@
         </nav>
     </header>
     <main class="container custorm-container px-0">
-        <section class="pagetitle">
+        <section class="pagetitle text-center">
             <h4>Page TItle</h4>
             <p>
                 <span><a href="">Home</a></span>
