--- a/creact-post.html
+++ b/creact-post.html
@@ -102,16 +102,16 @@
                     <h5>Creactor Title</h5>
                     <label class="input-group mb-3">
                         <span class="input-group-text" id="basic-addon1">Title</span>
-                        <input type="text" class="form-control" placeholder="Enter Title Post" aria-label="Title"
-                            aria-describedby="basic-addon1">
+                        <input type="text" class="form-control" id="title" placeholder="Enter Title Post"
+                            aria-label="Title" aria-describedby="basic-addon1">
                     </label>
                 </div>
                 <div>
                     <h5>Creactor Name</h5>
                     <label class="input-group mb-3">
                         <span class="input-group-text" id="basic-addon2">Name</span>
-                        <input type="text" class="form-control" placeholder="Enter Creactor Name" aria-label="Username"
-                            aria-describedby="basic-addon2">
+                        <input type="text" class="form-control" id="name" placeholder="Enter Creactor Name"
+                            aria-label="Username" aria-describedby="basic-addon2">
                     </label>
                 </div>
                 <div class="mb-3">
@@ -127,13 +127,13 @@
                     <input class="form-control" type="file" id="post-img" multiple>
                 </div>
                 <div class="form-floating">
-                    <textarea class="form-control" placeholder="Enter Content" id="floatingTextarea"
+                    <textarea class="form-control" placeholder="Enter Content" id="content"
                         style="height: 100px"></textarea>
-                    <label for="floatingTextarea2">
+                    <label for="content">
                         <h6>Enter Content</h6>
                     </label>
                 </div>
-                <button class="btn btn-primary text-center border-0">Creact Post</button>
+                <button id="submit" class="btn btn-primary text-center border-0">Creact Post</button>
             </form>
         </div>
 
