--- a/creact-post.html
+++ b/creact-post.html
@@ -105,33 +105,23 @@
                         <input type="text" class="form-control" id="title" placeholder="Enter Title Post"
                             aria-label="Title" aria-describedby="basic-addon1">
                     </label>
-                </div>
-                <div>
-                    <h5>Creactor Name</h5>
-                    <label class="input-group mb-3">
-                        <span class="input-group-text" id="basic-addon2">Name</span>
-                        <input type="text" class="form-control" id="name" placeholder="Enter Creactor Name"
-                            aria-label="Username" aria-describedby="basic-addon2">
-                    </label>
-                </div>
-                <div class="mb-3">
-                    <label for="main-img" class="form-label">
-                        <h5>Creactor Image</h5>
-                    </label>
-                    <input class="form-control" type="file" id="creactor-img" multiple>
+                    <span id="errortitle"></span>
                 </div>
                 <div class="mb-3">
                     <label for="img-post" class="form-label">
                         <h5>Post Image</h5>
                     </label>
                     <input class="form-control" type="file" id="post-img" multiple>
+                    <span id="errorimg"></span>
                 </div>
                 <div class="form-floating">
-                    <textarea class="form-control" placeholder="Enter Content" id="content"
+                    <textarea class="form-control" oninput="countCharacters()" placeholder="Enter Content" id="content"
                         style="height: 100px"></textarea>
                     <label for="content">
                         <h6>Enter Content</h6>
                     </label>
+                    <span id="errorcontent"></span>
+                    <span id="charCount">0/10000</span>
                 </div>
                 <button id="submit" class="btn btn-primary text-center border-0">Creact Post</button>
             </form>
