--- a/creact-post.html
+++ b/creact-post.html
@@ -103,7 +103,7 @@
                     <label class="input-group mb-3">
                         <span class="input-group-text" id="basic-addon1">Title</span>
                         <input type="text" class="form-control" id="title" placeholder="Enter Title Post"
-                            aria-label="Title" aria-describedby="basic-addon1">
+                            aria-label="Title" aria-describedby="basic-addon1" oninput="inputCharacters()">
                     </label>
                     <span id="errortitle"></span>
                 </div>
