--- a/blog-listing.html
+++ b/blog-listing.html
@@ -353,7 +353,7 @@
         </div>
     </footer>
     <script src="./asset/script/vendor.min.js"></script>
-    <script src="./asset/script/click.js"></script>
+    <script src="./asset/script/function.js"></script>
 </body>
 
 </html>
