--- a/creact-post.html
+++ b/creact-post.html
@@ -222,5 +222,5 @@
         </div>
     </footer>
     <script src="./asset/script/vendor.min.js"></script>
-    <script src="./asset/script/click.js"></script>
+    <script src="./asset/script/function.js"></script>
 </body>
