--- a/author-page.html
+++ b/author-page.html
@@ -399,7 +399,7 @@
         </div>
     </footer>
     <script src="./asset/script/vendor.min.js"></script>
-    <script src="./asset/script/click.js"></script>
+    <script src="./asset/script/function.js"></script>
 </body>
 
 </html>
