--- a/single-post.html
+++ b/single-post.html
@@ -337,7 +337,7 @@
         </div>
     </footer>
     <script src="./asset/script/vendor.min.js"></script>
-    <script src="./asset/script/click.js"></script>
+    <script src="./asset/script/function.js"></script>
 </body>
 
 </html>
