--- a/create-post.html
+++ b/create-post.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creact Post</title>
+    <title>Create Post</title>
     <link rel="stylesheet" href="./asset/style/vendor.min.css">
     <link rel="stylesheet" href="./asset/style/media-screen.css">
     <link rel="stylesheet" href="./asset/style/layout.css">
@@ -123,7 +123,7 @@
                     <span id="errorcontent"></span>
                     <span id="charCount">0/10000</span>
                 </div>
-                <button id="submit" class="btn btn-primary text-center border-0">Creact Post</button>
+                <button id="submit" class="btn btn-primary text-center border-0">Create Post</button>
             </form>
         </div>
 
